[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-winner"
version = "0.1.0"
description = "CTF toolkit CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
]

[project.scripts]
ctf = "ctf.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctf*"]
